--- a/Transformers/Transformer.ipynb
+++ b/Transformers/Transformer.ipynb
@@ -161,7 +161,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The main component in Transformers is the attention layer. There are many varieties of attention layers, such as Multi-head attention (MHA), Grouped-Query Attention (GQA), and Multi-Query Attention (MQA). The other versions are almost similar with fewer parameters.\n",
+        "The main component in Transformers is the attention layer. There are many varieties of attention layers, such as Multi-head attention (MHA), Grouped-Query Attention (GQA), and Multi-Query Attention (MQA). These versions are almost similar with fewer parameters.\n",
         "<img src=\"https://miro.medium.com/v2/resize:fit:1400/format:webp/1*r-3sWaUT4K-5ogX99hqT0A.png\" height=200>\n",
         "\n",
         "The core idea of an attention layer focuses on around three learnable matrices: **Query (Q)**, **Key (K)**, and **Value (V)**, all derived from the input embeddings. Conceptually, a Query seeks out relevant Keys. When a Query vector is multiplied with all Key vectors (typically using a dot product to measure similartiy), it generates attention scores. These scores indicate how related each Key is to the Query (how each token to another token) .\n",
