--- a/Transformers/Transformer.ipynb
+++ b/Transformers/Transformer.ipynb
@@ -19,7 +19,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
+        "id": "reshape-in-github",
         "colab_type": "text"
       },
       "source": [
@@ -201,9 +201,9 @@
         "        # q,v,k shapes: [bs, num_of_tokens (N) , heads * head_dim ]\n",
         "        # Now techincally, we will work on each head independently, as if there were batches of heads!\n",
         "        # (batch_size * heads, num_tokens, head_dim)\n",
-        "        q = q.view(q.shape[0]*self.heads, q.shape[1], self.head_dim)\n",
-        "        k = k.view(k.shape[0]*self.heads, k.shape[1], self.head_dim)\n",
-        "        v = v.view(v.shape[0]*self.heads, v.shape[1], self.head_dim)\n",
+        "        q = q.reshape(q.shape[0]*self.heads, q.shape[1], self.head_dim)\n",
+        "        k = k.reshape(k.shape[0]*self.heads, k.shape[1], self.head_dim)\n",
+        "        v = v.reshape(v.shape[0]*self.heads, v.shape[1], self.head_dim)\n",
         "\n",
         "        energy = torch.bmm(q,k.permute(0,2,1)) # Q*K^T -> bs, q_N, k_N\n",
         "        if mask is not None:\n",
@@ -213,7 +213,7 @@
         "        # \n",
         "\n",
         "        out = torch.bmm(attention,v)\n",
-        "        out = out.view(q.shape[0]//self.heads, q.shape[1], self.embed_size) # bs,N,h*heads\n",
+        "        out = out.reshape(q.shape[0]//self.heads, q.shape[1], self.embed_size) # bs,N,h*heads\n",
         "        out = self.fc(out)\n",
         "        return out\n",
         "\n",
