--- a/Transformers/Transformer.ipynb
+++ b/Transformers/Transformer.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0aZBF7bM2HPqeZn26dcs8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -19,8 +18,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "reshape-in-github",
+        "id": "view-in-github",
         "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Mohamad-Atif1/paper2code/blob/main/Transformers/Transformer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "reshape-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Mohamad-Atif1/paper2code/blob/main/Transformers/Transformer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -62,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "dBcltR4cu1-o"
       },
@@ -146,7 +154,7 @@
       "metadata": {
         "id": "tId-z2S3SBJX"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -210,7 +218,7 @@
         "            energy = energy.masked_fill(mask==0,float(\"-1e20\"))\n",
         "\n",
         "        attention = torch.softmax(energy/(self.head_dim ** (0.5)), dim=2)\n",
-        "        # \n",
+        "        #\n",
         "\n",
         "        out = torch.bmm(attention,v)\n",
         "        out = out.reshape(q.shape[0]//self.heads, q.shape[1], self.embed_size) # bs,N,h*heads\n",
@@ -222,7 +230,7 @@
       "metadata": {
         "id": "JeaGWyXwv1r9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -282,7 +290,7 @@
       "metadata": {
         "id": "EL4RoIGK0W6g"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -312,7 +320,7 @@
       "metadata": {
         "id": "XjYmPBUddO7t"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -368,7 +376,7 @@
       "metadata": {
         "id": "IZ5O_ZUWzWpQ"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -411,7 +419,7 @@
       "metadata": {
         "id": "bJh4SPWL2R-0"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -527,7 +535,7 @@
       "metadata": {
         "id": "eVrALDup2WjU"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -559,7 +567,7 @@
         },
         "outputId": "fd83e0c0-3369-41f5-e041-a439ea63ee97"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1185,7 +1193,7 @@
         },
         "outputId": "668c16dc-9d30-4d34-e3a7-542f052a8d0f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1426,92 +1434,6 @@
             "EN: hello how are you -> AR: يمكنك شراؤه هنا\n",
             "EN: i am a student -> AR: أتمنى\n",
             "EN: what is your name -> AR: كم الساعة\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "trg = torch.tensor([[1, 7, 4, 3, 5, 9, 2, 0], [1, 5, 6, 2, 4, 7, 6, 2]]).to(device)\n",
-        "\n",
-        "trg_pad_mask = (trg != 0).unsqueeze(1).unsqueeze(2)\n",
-        "trg_pad_mask = trg_pad_mask.expand(2, 1, 8, 8)"
-      ],
-      "metadata": {
-        "id": "7MT6__2orpMv"
-      },
-      "execution_count": 11,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "trg_pad_mask = (trg != 0).unsqueeze(1).unsqueeze(2)\n",
-        "trg_pad_mask.shape"
-      ],
-      "metadata": {
-        "id": "EF2p36elr2CP",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "afb36716-c7c4-4a39-e61f-e54effa9de98"
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "torch.Size([2, 1, 1, 8])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"\\nTesting translations:\")\n",
-        "test_sentences = [\n",
-        "    \"انا طالب\",\n",
-        "    \"what is your name\",\n",
-        "    \"i am a student\"\n",
-        "]\n",
-        "\n",
-        "for sentence in test_sentences:\n",
-        "    translation = translate_sentence(model, sentence, src_vocab, tgt_vocab, device)\n",
-        "    print(f\"EN: {sentence}\")\n",
-        "    print(f\"FR: {translation}\")\n",
-        "    print()\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "OWXkV3JJr6ji",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d7997a59-de1b-4189-93dc-0cabf7ca843f"
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "Testing translations:\n",
-            "EN: انا طالب\n",
-            "FR: أحب قراءة الكتب\n",
-            "\n",
-            "EN: what is your name\n",
-            "FR: كم الساعة\n",
-            "\n",
-            "EN: i am a student\n",
-            "FR: أتمنى\n",
             "\n"
           ]
         }
