--- a/Transformers/SETR.ipynb
+++ b/Transformers/SETR.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP7jjalJNoW85fG7Ym39sSZ",
+      "authorship_tag": "ABX9TyPGOPVzOdbAJHxLHzvbCG9w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,9 +49,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Image semantic segmentation** assigns a class label to every pixel in an image. It was mainly done using CNNs (Encoder-Decoder) for capturing local patterns. Now, transformer-based models like STER [Rethinking Semantic Segmentation from a Sequence-to-Sequence Perspective](https://arxiv.org/abs/2012.15840) are used to better capture global context and improve results.\n",
+        "**Image semantic segmentation** assigns a class label to every pixel in an image. It was mainly done using CNNs (Encoder-Decoder) for capturing local patterns. Now, transformer-based models like SETR [Rethinking Semantic Segmentation from a Sequence-to-Sequence Perspective](https://arxiv.org/abs/2012.15840) are used to better capture global context and improve results.\n",
         "\n",
-        "STER is one of the first models to use Transformers for image segmentation. Many other models came after STER using transformers for this task, but I think implementing STER is a good start to understand the others more easily.\n",
+        "SETR is one of the first models to use Transformers for image segmentation. Many other models came after SETR using transformers for this task, but I think implementing SETR is a good start to understand the others more easily.\n",
         "\n"
       ],
       "metadata": {
