parsing corrections and some typo fixing

--- a/vqvaes/VQVAE.ipynb
+++ b/vqvaes/VQVAE.ipynb
@@ -142,12 +142,17 @@
         "Now after decoding we goes to compute the loss function, and as we saw before the loss function doesn't have KL divergence.\n",
         "but we do have recon term in form of negative log likelihood, and the full form of the loss is dependent on all 3 components of the archeticture (to ensure every component learn correctly justly and its just a beautiful sensible loss).\n",
         "\n",
-        "Notice there is no expectation over the posterior bec its deterministic. \\\\\n",
-        "$L(\\theta,\\phi, C; x, Z_q) = - log(p_\\phi(x|Z_q)) + ...$ \\\\\n",
-        "`________________________^ reconstruction term` it optimizes $\\theta, \\phi$ \\\\\n",
-        "The encoder parameterized by $\\phi$ \\\\\n",
-        "The decoder parameterized by $\\theta$ \\\\\n",
-        "The codebook parameterized by $C$ \\\\\n",
+        "Notice there is no expectation over the posterior bec its deterministic.\n",
+        "\n",
+        "$L(\\theta,\\phi, C; x, Z_q) = - log(p_\\phi(x|Z_q)) + ...$\n",
+        "\n",
+        "`________________________^ reconstruction term` it optimizes $\\theta, \\phi$\n",
+        "\n",
+        "The encoder parameterized by $\\phi$\n",
+        "\n",
+        "The decoder parameterized by $\\theta$\n",
+        "\n",
+        "The codebook parameterized by $C$\n",
         "\n",
         "If you might have guessed already, the quantization step is not differentiable. To solve this dilemma we gonna directly copy the gradients $\\nabla L$ from $Z_q$ to $Z_e$. We simply passed the gradients *Straight-through* the quantization layer (and this is why this trick is called Straight-through estimation).\n",
         "\n",
@@ -155,14 +160,15 @@
         "\n",
         "$\\frac{\\partial \\nabla L}{\\partial Z_e}$ $=$ $\\frac{\\partial \\nabla L}{\\partial Z_q}$\n",
         "\n",
-        "This would only make since if $Z_e \\approx Z_q$ and that's why neighrest neighbor make since.\n",
+        "This would only make sense if $Z_e \\approx Z_q$ and that's why neighrest neighbor make sense.\n",
         "\n",
         "Althought this solves the issue of passing the gradients to the encoder and now it can learn, but the codebooks (which are randomly initialized) are not getting any gradients and this will limit the ability to control the generation if codebooks remain static.\n",
         "\n",
         "So in order to optimize codebooks we have to introduce the second loss term:\n",
         "\n",
-        "$L(\\theta,\\phi, C; x, Z_q) = ... + \\|sg[Z_e(x)]-e\\|^2_2 + ...$ \\\\\n",
-        "`________________________^ codebook loss` it optimizes $C$  \\\\\n",
+        "$L(\\theta,\\phi, C; x, Z_q) = ... + \\|sg[Z_e(x)]-e\\|^2_2 + ...$\n",
+        "\n",
+        "`________________________^ codebook loss` it optimizes $C$  \n",
         "\n",
         "Simply penalizes each codeword vector $e$ based on the squared distance from its associated encoding vector $Z_e(x)$\n",
         "\n",
@@ -176,9 +182,11 @@
         "2. Arbitrary growth of encoding $Z_e$\n",
         "    Reconstruction loss might encorage higher values of $Z_e$ leading to also growth of some codeword $e$ which leads to instability and since the codebook loss doesn't affect the encoder, it doesn't encourage the $Z_e$ to have values closer to codewords.\n",
         "\n",
-        "Third term came to rescue. Commitment loss \\\\\n",
-        "$L(\\theta,\\phi, C; x, Z_q) = ... + ... + \\|Z_e(x)-sg[e]\\|^2_2$ \\\\\n",
-        "`____________________________^ commitment loss` it optimizes $\\phi$ \\\\\n",
+        "Third term came to rescue. Commitment loss\n",
+        "\n",
+        "$L(\\theta,\\phi, C; x, Z_q) = ... + ... + \\|Z_e(x)-sg[e]\\|^2_2$\n",
+        "\n",
+        "`____________________________^ commitment loss` it optimizes $\\phi$\n",
         "\n",
         "it looks like the codebook loss $\\|sg[Z_e(x)]-e\\|^2_2$ but the stop gradient operator on a different location.\n",
         "\n",
